Add support for mocking failed loads to WebURLLoaderMock.

This is necessary to write a unit test for https://bugs.webkit.org/show_bug.cgi?id=91685

BUG=none
TEST=none
R=tony
Review URL: https://chromiumcodereview.appspot.com/10821019

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@149931 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 55e82fc8e798a84a3ef0c4423070f593058a3da3